sidebar overflow in places bugfix

--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -326,7 +326,7 @@
   z-index: 1;
   left: 0;
   flex: 1;
-  max-height: calc(100vh - 300px);
+  max-height: calc(100vh - 358px);
   position: relative;
   display: flex;
   justify-content: center;
